--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,7 +2,7 @@
 https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css */
 html{line-height:1.15;-webkit-text-size-adjust:100%};
 
-body{margin:0};
+/* body{margin:0}; */
 
 main{display:block};
 
@@ -36,7 +36,7 @@ button,input{overflow:visible};
 
 button,select{text-transform:none};
 
-[type=button],[type=reset],[type=submit],button{-webkit-appearance:button};
+[type=button],[type=reset],[type=submit],button/*{-webkit-appearance:button};*/
 
 [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0};
 
@@ -54,7 +54,7 @@ textarea{overflow:auto};
 
 [type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto};
 
-[type=search]{-webkit-appearance:textfield;outline-offset:-2px};
+[type=search]{/*-webkit-appearance:textfield*/outline-offset:-2px};
 
 [type=search]::-webkit-search-decoration{-webkit-appearance:none};
 
